# office-connect

./: .gitignore  .pre-commit-hook.sh  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
dependencies/office-mcp/: pyproject.toml
dependencies/office-mcp/dependencies/office-mcp/docs/: azure_ad_permissions_admin.md  session_layer.md
dependencies/office-mcp/dependencies/office-mcp/office_con/: db_helpers.py
dependencies/office-mcp/dependencies/office-mcp/office_con/auth/: background_service_registry.py  office_user_instance.py
dependencies/office-mcp/dependencies/office-mcp/office_con/db/: __init__.py
dependencies/office-mcp/docs/: index.md  mcp_servers.md  security.md
dependencies/office-mcp/office_con/: db_user_instance.py
dependencies/office-mcp/office_con/auth/: __init__.py  azure_auth_utils.py
dependencies/office-mcp/office_con/db/: company_dir.py
dependencies/office-mcp/office_con/msgraph/: chat_handler.py  mail_handler.py  mcp_base.py  teams_handler.py
dependencies/office-mcp/office_con/testing/: __init__.py  fixtures.py  mock_data.py
dependencies/office-mcp/office_con/utils/: excel_parser.py
dependencies/office-mcp/tests/: test_mcp_server_integration.py
docs/: azure_ad_permissions.md  company_directory.md  handlers.md  mock_users.md  utilities.md
office_con/: __init__.py  logging_setup.py  mcp_permissions.py  mcp_server.py  peek.py  privacy.py  web_user_instance.py
office_con/auth/: background_service_registry.py  office_user_instance.py
office_con/db/: company_dir.py  company_dir_builder.py
office_con/msgraph/: calendar_handler.py  directory_handler.py  files_handler.py  mail_handler.py  mailbox_settings_handler.py  mcp_base.py  ms_graph_handler.py  office365_server.py  online_meetings_handler.py  people_handler.py  places_handler.py  presence_handler.py  profile_handler.py  tasks_handler.py
office_con/testing/: fixtures.py  mock_config.py  mock_data.py  mock_tokens.py  mock_transport.py
office_con/utils/: health_check.py
office_con/web/: __init__.py  images.py
samples/: .env.template  THIRD-PARTY-NOTICES.md  web_app.py
samples/static/: app.css  app.js  index.html
scripts/: content_guard.py  room_availability.py
tests/: test_attachment_safety.py  test_auth_errors.py  test_files_search.py  test_integration_handlers.py  test_logging_and_throttle.py  test_mail_enrichments.py  test_mail_enrichments_integration.py  test_mail_handler.py  test_mail_integration.py  test_mcp_permissions.py  test_mcp_server_integration.py  test_msgraph_integration.py  test_new_handlers.py  test_peek.py  test_privacy_filters.py
(+6 files in other folders)
