[tool.poetry]
name = "office-connect"
version = "0.1.7"
description = "Microsoft 365 superpowers for Python and AI agents"
authors = ["Michael Ikemann"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Alyxion/office-connect"
repository = "https://github.com/Alyxion/office-connect"
documentation = "https://github.com/Alyxion/office-connect#readme"
keywords = [
    "microsoft-365",
    "microsoft-graph",
    "msgraph",
    "office365",
    "outlook",
    "teams",
    "onedrive",
    "sharepoint",
    "mcp",
    "model-context-protocol",
    "ai-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{include = "office_con"}]

[tool.poetry.dependencies]
python = ">=3.14"
O365 = ">2.0.26"
pydantic = ">2.5.3"
python-dotenv = ">1.0.0"
redis = "*"
pymongo = "*"
beautifulsoup4 = ">4.12.3"
pypdfium2 = "*"
pdfplumber = "*"
openpyxl = "*"
python-docx = "*"
PyJWT = "*"
aiohttp = "*"
cryptography = "*"
bcrypt = "*"
requests = "*"
mcp = ">=1.0.0"
fastapi = "^0.135.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.5"
mypy = "^1.19.1"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"

[tool.poetry.scripts]
office-connect = "office_con.mcp_server:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
